push it out idc

--- a/index.html
+++ b/index.html
@@ -1,1 +1,47 @@
-<h1>gay</h1>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,user-scalable=no">
+    <meta content="Seroxyl's Website" property="og:title">
+    <meta content="ello!!" property="og:description">
+    <meta content="https://seroxyl.github.io/" property="og:url">
+    <link href="./cdn/beer/css/beer.min.css" rel="stylesheet">
+    <script type="module" src="./cdn/beer/js/beer.min.js"></script>
+  </head>
+  <body class="dark">
+    <!-- [HEADER] MOBILE -->
+    <header class="fixed">
+      <nav>
+        <h5 class="max"></h5>
+        <button class="circle transparent s" data-ui="#about">
+          <img class="responsive s" src="https://github.com/seroxyl.png">
+        </button>
+      </nav>
+    </header>
+    <!-- [HEADER] PC -->
+    <nav class="left m l">
+      <header>
+        <button class="circle transparent m l" data-ui="#aboutpc">
+          <img class="responsive" src="https://github.com/seroxyl.png">
+        </button>
+      </header>
+      <a>
+        <i>expand_circle_down</i>
+        <div>Index</div>
+      </a>
+    </nav>
+    <!-- -->
+    <!-- -->
+    <!-- Main Container -->
+    <main class="responsive">
+      <!-- LUI, PC, Tablet warning message -->
+      <article class="m l">
+        <h5>You're on Landscape UI</h5>
+        <p>Support is still limited and everything might be probably broken.</p>
+      </article>
+      <!-- [ARTICLES] Mobile -->
+      
+    </main>
+  </body>
+</html>
