--- a/index.html
+++ b/index.html
@@ -9,17 +9,47 @@
     <link href="./cdn/beer/css/beer.min.css" rel="stylesheet">
     <script type="module" src="./cdn/beer/js/beer.min.js"></script>
   </head>
-  <body class="dark">
+  <body class="dark" style="--primary:#ffffff;
+--on-primary:#000000;
+--primary-container:#7b2949;
+--on-primary-container:#ffd9e2;
+--secondary:#ffffff;
+--on-secondary:#422931;
+--secondary-container:#5a3f47;
+--on-secondary-container:#ffd9e2;
+--tertiary:#efbd94;
+--on-tertiary:#48290b;
+--tertiary-container:#623f20;
+--on-tertiary-container:#ffdcc1;
+--error:#ffb4ab;
+--on-error:#690005;
+--error-container:#93000a;
+--on-error-container:#ffb4ab;
+--background:#201a1b;
+--on-background:#ebe0e1;
+--surface:#000000;
+--on-surface:#ebe0e1;
+--surface-variant:#514347;
+--on-surface-variant:#d5c2c6;
+--outline:#9e8c90;
+--outline-variant:#514347;
+--shadow:#000000;
+--scrim:#000000;
+--inverse-surface:#ebe0e1;
+--inverse-on-surface:#352f30;
+--inverse-primary:#984061;
+--surface-dim:#171213;
+--surface-bright:#3e3739;
+--surface-container-lowest:#120d0e;
+--surface-container-low:#201a1b;
+--surface-container:#241e1f;
+--surface-container-high:#2f282a;
+--surface-container-highest:#3a3334;">
     <!-- [HEADER] MOBILE -->
-    <header class="fixed">
-      <nav>
-        <h5 class="max"></h5>
-        <button class="circle transparent s" data-ui="#about">
-          <img class="responsive s" src="https://github.com/seroxyl.png">
-        </button>
-      </nav>
+    <header class="fixed s">
+
     </header>
-    <!-- [HEADER] PC -->
+    <!-- [HEADER] PC -->  
     <nav class="left m l">
       <header>
         <button class="circle transparent m l" data-ui="#aboutpc">
@@ -40,8 +70,20 @@
         <h5>You're on Landscape UI</h5>
         <p>Support is still limited and everything might be probably broken.</p>
       </article>
+      <!-- [INTRO MIN] -->
+      <h1>hello</h1>
+      <h2 class="small">i'm seroxyl</h2>
       <!-- [ARTICLES] Mobile -->
-      
+      <article class="no-padding border">
+  <img class="responsive small" src="./cdn/img/NEXTLEVEL.png">
+  <div class="padding">
+    <h5>3.0 Rewrite</h5>
+    <p class="italic">Instead of form following function, what if form followed feeling?</p>
+    <nav>
+      <button>Button</button>
+    </nav>
+  </div>
+</article>
     </main>
   </body>
 </html>
